inst/www/css/RiCHT.css
/************************************/
/*Created by: Dorlan Francis        */
/*Date: June, 2022                  */
/*Project: RiCHT                    */
/*File: RiCHT.css                   */
/*Description: Main project CSS File*/
/************************************/
/*Main Package CSS*/

/*Imports css to RiCHT main css     */
@import url("AboutPage.css");
@import url("ModelInfoPage.css");
@import url("ModelResultsPage.css");

/************************************/

/*Fix*/
 body { min-height: 411px !important; }             /*fixes white space below footer*/
 footer.main-footer {max-height: 50px}              /*default footer height override*/

 .myclearfix::after {                               /*DEBUG delete if not needed*/
  content: "";
  clear: both;
  display: table;
}

/*ShinyDashboardPlus Atmel logo override*/
.main-header .logo {
  padding: 0;                                       /*Removed padding so image visible*/
}

a.logo > span > img {
  background-color: white;
}

/*GC Footer */
.footer-wrapper{                                    /*.footer-wrapper override*/
  display:flex;
  flex-directiom:row;
  justify-content:space-between;
  /*align-items:center;*/
  flex-wrap: wrap;
}
.footer-copyright, .footer-build{
   font-size: large;
   font-weight: bold;
}
.footer-CanLogo{
  height: 20px;
  width: auto;
}

/*Side Panel Logo/crest */
.crestLogo{
  display:block;
  text-align:center;

  z-index: 1000;
  position:relative;
}

.crestLogo > img{
  width: 75px;
  height: auto;
  border-radius: 45%;


  overflow: visible;
  z-index: 1001;
  position: relative;
}
.sideHR{
  border-top: 1px solid white;

}

